--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,82 @@
-.App {
-  text-align: center;
+.nav-uI li {
+  display: inline-block;
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-uI li a{
+  color: #fff;
+  padding: 5px;
+  text-decoration: none;
 }
+
+.nav-uI{
+  padding:5px;
+  margin:0;
+  background-color: skyblue;
+}
+
+.footer{
+  position:absolute;
+  bottom:0;
+  text-align: center;
+  width:100%;
+  background-color: skyblue;
+
+}
+
+.register,.product{
+  margin-left: 30%;
+}
+.login{
+  margin-left: 30%;
+  margin-top: 100px;
+
+
+}
+
+
+.InputBox{
+  display: block;
+  margin: 25px;
+  padding:7px;
+  width: 300px;
+  border: 1px solid skyblue;
+
+}
+
+.appButton{
+  margin:25px;
+  padding:10px;
+  width:150px;
+  background-color: skyblue;
+  border:  1px solid;
+  cursor: pointer;
+}
+.nav-right{
+  text-align: right;
+}
+.logo{
+  width: 50px;
+  float:left;
+  border-radius: 80%;
+  margin-top:1px;
+  margin-left: 30px;
+}
+.invalid-input{
+  color:red;
+  margin-top:-20px;
+  display:block;
+  margin-left: 20px;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+
 
 .App-header {
   background-color: #282c34;
